Fix too large text on the small tiles on tablet

--- a/source/assets/stylesheets/styles/_project_story_small_tile.scss
+++ b/source/assets/stylesheets/styles/_project_story_small_tile.scss
@@ -90,10 +90,12 @@
   line-height: 1.6em;
 
   @include breakpoint($tablet-breakpoint) {
-    line-height: 1.5em;
+    line-height: 1.4em;
+    padding-right: 10px;
   }
 
   @include breakpoint($desktop-breakpoint) {
+    line-height: 1.6em;
     padding-right: 30px;
   }
 }
